# qwasr

./: Cargo.toml  RELEASES.md
.github/workflows/: ci.yaml  publish.yaml  release.yaml
crates/guest-macro/: Cargo.toml  example.rs
crates/otel/: Cargo.toml
crates/otel/src/: lib.rs
crates/qwasr-sdk/: Cargo.toml
crates/runtime-macro/: Cargo.toml  README.md  example.rs
crates/warp/: Cargo.toml
crates/wasi-blobstore/: Cargo.toml
crates/wasi-config/: Cargo.toml
crates/wasi-http/: Cargo.toml
crates/wasi-identity/: Cargo.toml
crates/wasi-keyvalue/: Cargo.toml
crates/wasi-messaging/: Cargo.toml
crates/wasi-otel/: Cargo.toml
crates/wasi-otel-attr/: Cargo.toml
crates/wasi-sql/: Cargo.toml  README.md
crates/wasi-vault/: Cargo.toml
crates/wasi-websockets/: Cargo.toml
crates/yetti/: Cargo.toml
crates/yetti-sdk/: Cargo.toml
crates/yetti-sdk/src/: api.rs  capabilities.rs  lib.rs
crates/yetti-sdk/src/api/: request.rs
docs/: Architecture.md
examples/: Cargo.toml
examples/blobstore/: README.md  guest.rs  runtime.rs
examples/config/: README.md  guest.rs  runtime.rs
examples/http/: README.md  guest.rs
examples/http-proxy/: README.md  guest.rs  runtime.rs
examples/identity/: .env.example  guest.rs  runtime.rs
examples/keyvalue/: README.md  guest.rs  runtime.rs
examples/messaging/: guest.rs  runtime.rs
examples/otel/: README.md  guest.rs  runtime.rs
examples/sql/: README.md  guest.rs  runtime.rs
examples/vault/: README.md  guest.rs  runtime.rs
examples/websockets/: README.md  guest.rs  runtime.rs
supply-chain/: config.toml
(+84 files in other folders)
