[package]
name = "yetti-sdk"
description = "Yetti guest SDK"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["json", "macros", "query"] }
bytes.workspace = true
http.workspace = true
http-body.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "2.0.17"
tracing.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
yetti-guest-macro.workspace = true
yetti-wasi-config.workspace = true
yetti-wasi-http.workspace = true
yetti-wasi-identity.workspace = true
yetti-wasi-keyvalue.workspace = true
yetti-wasi-messaging.workspace = true
yetti-wasi-otel.workspace = true
wasip3.workspace = true
wit-bindgen.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
